[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-chat-events"
version = "0.1.0"
description = "Standardized Socket.IO chat events on top of Flask-SocketIO."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "flask-chat-events contributors" }]
keywords = ["flask", "socketio", "flask-socketio", "chat", "events", "websocket"]
classifiers = [
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Flask>=2.3",
    "Flask-SocketIO>=5.3",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]
dev = ["pytest>=7.4", "black>=24.1"]

[project.urls]
Homepage = "https://github.com/example/flask-chat-events"
Source = "https://github.com/example/flask-chat-events"
Issues = "https://github.com/example/flask-chat-events/issues"

[tool.setuptools.packages.find]
include = ["flask_chat_events*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
